# Assignment_cmp3103

./: README.md  compose.yml  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh  task1.py  task2.py  task3.py  task3_map.pgm  task3_map.yaml
cmp3103m_ros2_code_fragments/: setup.py
cmp3103m_ros2_code_fragments/cmp3103m_ros2_code_fragments/: colour_center.py  colour_chaser.py  opencv_bridge.py  task1.py  task2.py
cmp3103m_ros2_code_fragments/cmp3103m_ros2_code_fragments/ipynb/: kinematics.ipynb
cmp3103m_ros2_code_fragments/lib/cmp3103m_ros2_code_fragments/: go_waypoints  task1  task2  task3
cmp3103m_ros2_code_fragments/share/cmp3103m_ros2_code_fragments/: package.bash  package.sh  package.zsh
uol_tidybot/: package.xml  setup.py
uol_tidybot/launch/: tidybot.launch.py
uol_tidybot/lib/uol_tidybot/: generate_objects  spawn_patches
uol_tidybot/models/dice_simple_red/: model.sdf
uol_tidybot/share/uol_tidybot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
uol_tidybot/share/uol_tidybot/models/dice_simple/: model.sdf
uol_tidybot/share/uol_tidybot/worlds/: level_1_1.world  level_2_1.world
uol_tidybot/uol_tidybot/: spawn_objects.py  spawn_patches.py
uol_tidybot/worlds/: level_2_2.world  level_2_3.world
uol_tidybot_control/lib/uol_tidybot_control/: control_strategy
uol_tidybot_control/share/uol_tidybot_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
